# LightningTreeUltimate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  example.py  graphics.py  libs_example.cpp  main  main.cpp
configs/: main.yaml  testing.yaml  testing_1.yaml  testing_2.yaml  testing_3.yaml  testing_4.yaml  testing_new.yaml  testing_old.yaml
libs/: CMakeLists.txt
libs/physics/: CMakeLists.txt  constants.h  physics.cpp  physics.h
libs/physics/tests/: CMakeLists.txt  tests.cpp
src/: Constants.h  DynamicOctree.h  ExternalField.h  LightningTree.cpp  LightningTree.h  Octree.h  RandomDirections.h
